# cardmarket-to-archidekt

./: .gitignore  LICENSE  README.md  cm_to_csv.py  main.py  pyproject.toml  requirements.txt
common/: currency.py  logging.py  util.py
