[project]
name = "cardmarket-to-archidekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = ["ruff>=0.12.4"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["ALL"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = [
    "ANN",
    "D",
    "E501",
    "PLR0911",
    "TRY003",
    "EM102",
    "EM101",
    "ERA001",
    "DTZ005",
    "FBT001",
    "FBT002",
]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
